@@ -12,7 +12,7 @@ public class DepartmentsTest {
     @Test
     public void whenMissed() {
         List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -20,7 +20,7 @@ public class DepartmentsTest {
     @Test
     public void whenNonChange() {
         List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -28,7 +28,7 @@ public class DepartmentsTest {
     @Test
     public void naturalCompTest() {
         List<String> input = Arrays.asList("k1", "k1/sk2", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k1/sk2");
+        List<String> expect = List.of("k1", "k1/sk1", "k1/sk2");
         Departments.sortAsc(input);
         assertThat(input, is(expect));
     }
